Add '25w05a' sources